Added the og tags. Working on the twitter ones

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <title>BlueVolvo Rides</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A page for an automobile dealership">
         <meta name="keywords" content="html, css, semantic html, car, automobile, website">
         <!--Open Graph-->
-        
+        <meta property="og:title" content="BlueVolvo Rides">
+        <meta property="og:description" content="It is an automobile website">
+        <meta property="og:image" content="#">
+        <meta property="og:url" content="#">
+
+        <!--Twitter open graph-->
+        <meta name="Twitter:card" content="summary_large_image">
+
     </head>
 </html>
