done with twitter tags. Can move on to the main show

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <meta property="og:description" content="It is an automobile website">
         <meta property="og:image" content="#">
         <meta property="og:url" content="#">
-
         <!--Twitter open graph-->
-        <meta name="Twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="#">
+        <meta name="twitter:description" content="an automobile website about cars">
+        <meta name="twitter:title" content="BlueVolvo Rides">
+        <meta name="twitter:image" content="#">
 
     </head>
 </html>
