--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>BlueVolvo Rides</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A page for an automobile dealership">
