--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
         <meta name="twitter:description" content="an automobile website about cars">
         <meta name="twitter:title" content="BlueVolvo Rides">
         <meta name="twitter:image" content="#">
+        <!--Fonts Montserrat and Lexend-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+     
     </head>
+
+<body>
+    <head>
+        <nav>
+            <ul>
+                <li>Cars</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+            </ul>
+            <h1 class="logo">BlueVolvo Rides</h1>
+            <ul>
+                <li>Sign In</li>
+                <li>Sign Up</li>
+
+            </ul>
+           
+        </nav>
+    </head>
+</body>
 </html>
