not 100% in love with the background. Will have to work on that i guess

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
 
 <body>
-    <head>
+    <header class="hero">
         <nav>
             <ul>
                 <li>Cars</li>
@@ -43,6 +43,6 @@
             </ul>
            
         </nav>
-    </head>
+    </header>
 </body>
 </html>
