Successfully added a nice call to action. Working on button next

--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
             <ul>
                 <li>Sign In</li>
                 <li>Sign Up</li>
-
             </ul>
-           
         </nav>
+        <section class="call_to_action">
+            <h1>Experience Luxury <span>Redefined<span></h1>
+            <p>Discover a seamless blend of comfort,elegance and sophistication with every ride. Your journey to luxury begins here</p>
+        </section>
+
+        <button>Explore Our Fleet</button>
     </header>
 </body>
 </html>
