added hover effects.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <header class="hero">
         <nav>
             <ul>
-                <li>Cars</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
+                <li><a href="#">Cars</a></li>
+                 <li><a href="#">About Us</a></li> 
+                 <li><a href="#">Contact Us</a>
             </ul>
             <h1 class="logo">BlueVolvo Rides</h1>
             <ul>
-                <li>Sign In</li>
-                <li>Sign Up</li>
+                <li><a href="#">Sign In</a></li> 
+                <li><a href="#">Sign Up</a></li>
             </ul>
         </nav>
         <section class="call_to_action">
